--- a/ex03.html
+++ b/ex03.html
@@ -21,6 +21,8 @@
         <div class="row">
             <div class="col">oi</div>
             <div class="col">oi</div>
+            <div class="col">oi</div>
+            <div class="col">oi</div>
         </div>
         <div class="row">
             <div class="col">oi</div>
