--- a/ex03.html
+++ b/ex03.html
@@ -23,6 +23,8 @@
             <div class="col">oi</div>
             <div class="col">oi</div>
             <div class="col">oi</div>
+            <div class="col">oi</div>
+            <div class="col">oi</div>
         </div>
         <div class="row">
             <div class="col">oi</div>
